2011-07-28  Sam Steingold  <sds@gnu.org>

	* makemake.in (GLLIB_MODULE_HEADERS): set to regex.h for regexp

2011-07-27  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (ANSIC_error): export to clisp.h

2011-07-27  Sam Steingold  <sds@gnu.org>

	* Makefile.devel (GNULIB_CORE): fix a typo: setsockopt was
	requested twice while getsockopt was not requested at all
	(GNULIB_IMPORTS): add recvfrom & sendto for rawsock
	* modules/rawsock/rawsock.c: use ANSIC_error instead of OS_error

2011-07-27  Sam Steingold  <sds@gnu.org>

	fix mingw compilation
	* lispbibl.d (setjmp) [__MINGW32__]: do not define
	Include <winsock2.h> before <windows.h> to avoid a warning
	* stream.d (QueryInformationFile) [WIN32_NATIVE]: do not include
	<ddk/ntifs.h> here, instead ...
	* win32.d: include <winternl.h> & <ntstatus.h>
	(_exit): remove prototype (get it from gnulib)
	(lseek): undef before redefining
	(CoGetCurrentProcess): remove prototype, rely on above headers

2011-07-27  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c: when the portability is ensured by
	gnulib, use ANSIC_error; when we use WIN32_NATIVE functions
	directly, use OS_error
	(POSIX:MKSTEMP) [WIN32_NATIVE]: use _get_osfhandle to convert the
	return value of gnulib mkstemp() to a windows file handle
	Include <shldisp.h> & <shlguid.h> for CLSID_ShellLink &
	IID_IShellLink
	* modules/regexp/Makefile.in (NO_CXX): removed unused variable

2011-07-27  Sam Steingold  <sds@gnu.org>

	* spvw_ctype.d (init_ctype): add "#ifdef LC_MESSAGES" for mingw

2011-07-26  Sam Steingold  <sds@gnu.org>

	* m4/clisp.m4 (CL_CLISP): use AC_MSG_ERROR instead of setting
	variables to bad values

2011-07-26  Sam Steingold  <sds@gnu.org>

	* Makefile.devel (GNULIB_CORE): add select

2011-07-26  Sam Steingold  <sds@gnu.org>

	revert last patch; fix the gnulib defines in a more robust way:
	change C names for Lisp symbols to avoid clashes with the C world
	Suggested by Bruno
	* undef-gnulib.h: remove