@@ -26,6 +26,7 @@
 
 srcdir = @srcdir@
 top_srcdir = @top_srcdir@
+VPATH = @srcdir@
 
 # Directories used by "make install":
 
